fix: alignment of open in new tab logo

--- a/_sass/navigation.scss
+++ b/_sass/navigation.scss
@@ -194,6 +194,8 @@ a.nav-text:hover {
 	white-space: nowrap;
 	width:100%;
 	background-size: cover;
+	display: flex !important;
+	gap: 5px !important;
 }
 
 .nav-sublink-logo {
